JEAP-6536 Remove relations from process instance